using System;

namespace UnityContainerApp.Models
{
    public sealed class Alice : Girlfriend
    {
        public override string Name { get; } = "アリス";
    }
}