using System;
using System.Collections.Generic;
using System.Linq;
using System.Text;
using System.Threading.Tasks;

namespace UnityContainerApp.Models
{
    public sealed class Boyfriend
    {
        public string Name { get; } = "aridai";
    }
}
