using System;

namespace UnityContainerApp.Models
{
    public abstract class Girlfriend
    {
        public abstract string Name { get; }
    }
}