using System;

namespace UnityContainerApp.Models
{
    public sealed class Marisa : Girlfriend
    {
        public override string Name { get; } = "魔理沙";
    }
}